--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.rabbitmq.addresses=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
+spring.rabbitmq.publisher-confirms=true
 
 rabbitmq.exchange=Exchange
 rabbitmq.transferInKey=transferIn.key
